--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.1.0'
+    testImplementation 'org.threeten:threetenbp:1.3.3'
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
     testImplementation junit5.unitTests()
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.10.0'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
 }
