--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,14 +41,27 @@ android {
         exclude 'META-INF/LICENSE.md'
         exclude 'META-INF/LICENSE-notice.md'
     }
+    flavorDimensions "sdk"
+    productFlavors {
+        normal {
+            dimension "sdk"
+        }
+        oreo {
+            dimension "sdk"
+            minSdkVersion 26
+            lintOptions {
+                tasks.lint.enabled = false
+            }
+        }
+    }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.2.41"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.2.50"
     implementation 'androidx.appcompat:appcompat:1.0.0-alpha3'
     implementation 'androidx.preference:preference:1.0.0-alpha3'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation 'androidx.core:core-ktx:1.0.0-alpha3'
     implementation 'androidx.fragment:fragment-ktx:1.0.0-alpha3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-alpha1'
@@ -69,9 +82,11 @@ dependencies {
     testImplementation 'org.threeten:threetenbp:1.3.3'
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
     testImplementation junit5.unitTests()
+    androidTestOreoImplementation junit5.instrumentationTests()
     testImplementation 'com.squareup.okhttp3:mockwebserver:3.10.0'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
+    androidTestOreoImplementation 'androidx.test:runner:1.1.0-alpha3'
+    androidTestOreoImplementation 'androidx.test:rules:1.1.0-alpha3'
+    androidTestOreoImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
