--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     androidTestOreoImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
 }
 
-task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
+task jacocoTestReport(type: JacocoReport, dependsOn: "testNormalDebugUnitTest") {
     group = "Reporting"
     description = "Generate Jacoco coverage reports for Debug build"
 
