Re-enable lint checks

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,9 @@ android {
         oreo {
             dimension "sdk"
             minSdkVersion 26
-            lintOptions {
-                tasks.lint.enabled = false
-            }
+//            lintOptions {
+//                tasks.lint.enabled = false
+//            }
         }
     }
 }
