--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,16 @@ android {
     }
 }
 
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.2.50"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5"
     implementation 'androidx.appcompat:appcompat:1.0.0-alpha3'
     implementation 'androidx.preference:preference:1.0.0-alpha3'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
@@ -71,8 +78,10 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
     implementation 'com.google.dagger:dagger:2.16'
     implementation 'com.google.dagger:dagger-android-support:2.16'
+    implementation "android.arch.persistence.room:runtime:1.1.0"
     kapt 'com.google.dagger:dagger-compiler:2.16'
     kapt "com.google.dagger:dagger-android-processor:2.16"
+    kapt "android.arch.persistence.room:compiler:1.1.0"
     testImplementation 'junit:junit:4.12'
     testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.1.0'
