--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,16 +61,17 @@ kotlin {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.2.50"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.2.51"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5"
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha3'
-    implementation 'androidx.preference:preference:1.0.0-alpha3'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5"
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.preference:preference:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-    implementation 'androidx.core:core-ktx:1.0.0-alpha3'
-    implementation 'androidx.fragment:fragment-ktx:1.0.0-alpha3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-alpha1'
+    implementation 'androidx.core:core-ktx:1.0.0-beta01'
+    implementation 'androidx.fragment:fragment-ktx:1.0.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
-    implementation 'com.google.android.material:material:1.0.0-alpha3'
+    implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.6.0'
