--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.0-beta03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.0.32"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha03"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
